_layout/default.htmlマージ、togglate_jsをincludeしている部分のみサルベージ

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   {{ content }}
 
   {% include footer.html %}
+  {% include anchor_links.html %}
   {% include analytics.html %}
-
   {% include togglate_js.html %}
 
 </body>
