Add warning across docs
Inform this docs has no longer maintained

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -12,6 +12,10 @@ layout: default
           <div class="improve right hide-on-mobiles">
             <a href="https://github.com/jekyll/jekyll/edit/master/site/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
           </div>
+          <div class="note warning">
+            <h5>この日本語訳ドキュメントは長らくメンテナンスされていません</h5>
+            <p>Jekyll 2.2.0 以降を使用する際は、<a href="https://jekyllrb.com/docs/">公式ドキュメント</a>を参照してください。</p>
+          </div>
           <h1>{{ page.title }}</h1>
           {{ content }}
           {% include section_nav.html %}
