--- a/_includes/docs_variables_table.html
+++ b/_includes/docs_variables_table.html
@@ -2,8 +2,10 @@
 <table>
   <thead>
     <tr>
-      <th>Variable</th>
-      <th>Description</th>
+      <th>変数</th>
+      <th>説明</th>
+      <!-- <th>Variable</th>
+      <th>Description</th> -->
     </tr>
   </thead>
   <tbody>
