--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
 <footer>
   <div class="grid">
     <div class="unit one-third center-on-mobiles">
-      <p>Jekyll is lovingly maintained by the <a href="/team/">core team</a> of volunteers. </p>
-      <p>The contents of this website are <br />&copy;&nbsp;{{ site.time | date: '%Y' }} under the terms of the <a href="{{ site.repository }}/blob/master/LICENSE">MIT&nbsp;License</a>.</p>
+      <p>Jekyllはボランティアの<a href="{{ "/team/" | relative_url }}">コアチーム</a>により愛情を込めて維持されています。</p>
+      <p>このWebサイトのコンテンツは<a href="{{ site.repository }}/blob/master/LICENSE" target="_blank">MIT&nbsp;License</a>に基づきます。&copy;&nbsp;{{ site.time | date: '%Y' }}</p>
+      <!-- <p>Jekyll is lovingly maintained by the <a href="/team/">core team</a> of volunteers. </p>
+      <p>The contents of this website are <br />&copy;&nbsp;{{ site.time | date: '%Y' }} under the terms of the <a href="{{ site.repository }}/blob/master/LICENSE">MIT&nbsp;License</a>.</p> -->
     </div>
     <div class="unit two-thirds align-right center-on-mobiles">
       <p>
