--- a/_layouts/step.html
+++ b/_layouts/step.html
@@ -11,7 +11,8 @@ layout: default
           <div class="improve right hide-on-mobiles">
             <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
           </div>
-          <h1>Step by Step Tutorial</h1>
+          <h1>Step by Step チュートリアル</h1>
+          <!-- <h1>Step by Step Tutorial</h1> -->
           <h2>{{ page.position }}. {{ page.title }}</h2>
           {{ content }}
           {% include step-index.html %}
