--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -11,8 +11,7 @@
  }
 
 body {
-  font: 300 21px Lato, 'M PLUS 1p', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-//  font: 300 21px Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 300 21px Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #ddd;
   background-color: #333;
   @include box-shadow(inset 0 3px 30px rgba(0,0,0,.3));
@@ -474,7 +473,7 @@ aside {
     list-style-type: none;
 
     a {
-      font-size: 14px;
+      font-size: 16px;
       position: relative
     }
 
