--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -7,7 +7,8 @@
       {% if page.url contains p.link %} class="current" {%- endif %}
     {%- endif -%}
   >
-    <a href="{{ p.link }}">{{ p.title }}</a>
+  <a href="{{ p.link }}" target="{{ p.target }}">{{ p.title }}</a>
+    <!-- <a href="{{ p.link }}">{{ p.title }}</a> -->
   </li>
   {% endfor %}
 </ul>
