検索エリア削除

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       {% include primary-nav-items.html %}
     </nav>
     <div class="search hide-on-mobiles">
-      {% include search/input.html %}
+      <!-- {% include search/input.html %} -->
     </div>
     <div class="meta hide-on-mobiles">
       <ul>
