公式サイト（原文）確認リンクへ

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -10,7 +10,8 @@ layout: default
       <div class="unit four-fifths">
         <article>
           <div class="improve right hide-on-mobiles">
-            <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a data-proofer-ignore href="https://jekyllrb.com{{ page.permalink }}" target="_blank"><i class="fa fa-pencil"></i> &nbsp;公式サイト<br />（原文）確認</a>
+            <!-- <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a> -->
           </div>
           <h1>{{ page.title }}</h1>
           {{ content }}
