--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -566,8 +566,8 @@ aside {
 }
 
 .improve {
-  padding-top: 25px;
-  font-size: 16px;
+  padding-top: 4px; //25px;
+  font-size: 14px; //16px;
   a {
     color: #999;
   }
