--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,9 @@ layout: default
 
     <div class="unit whole">
       <article>
+        <div class="improve right hide-on-mobiles">
+          <a data-proofer-ignore href="https://jekyllrb.com{{ page.permalink }}" target="_blank"><i class="fa fa-pencil"></i> &nbsp;公式サイト<br />（原文）確認</a>
+        </div><!--追加-->
         <h1>{{ page.title }}</h1>
         {{ content }}
       </article>
