--- a/_layouts/step.html
+++ b/_layouts/step.html
@@ -9,7 +9,8 @@ layout: default
       <div class="unit four-fifths">
         <article>
           <div class="improve right hide-on-mobiles">
-            <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a data-proofer-ignore href="https://jekyllrb.com{{ page.permalink }}" target="_blank"><i class="fa fa-pencil"></i> &nbsp;公式サイト<br />（原文）確認</a>
+            <!-- <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a> -->
           </div>
           <h1>Step by Step チュートリアル</h1>
           <!-- <h1>Step by Step Tutorial</h1> -->
