翻訳不要の変更を反映200621

--- a/_includes/docs_variables_table.html
+++ b/_includes/docs_variables_table.html
@@ -9,12 +9,12 @@
     </tr>
   </thead>
   <tbody>
-  {% for var in include.scope %}
-    <tr>
-      <td><p><code>{{ var.name }}</code></p></td>
-      <td><p>{{- var.description -}}</p></td>
-    </tr>
-  {% endfor %}
+    {% for var in include.scope -%}
+      <tr>
+        <td><p><code>{{ var.name }}</code></p></td>
+        <td><p>{{- var.description -}}</p></td>
+      </tr>
+    {% endfor -%}
   </tbody>
 </table>
 </div>
