--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,9 +4,7 @@ layout: default
 
   <section class="docs">
     <div class="grid">
-
-      {% include docs_contents_mobile.html %}
-
+      {% include docs_contents_mobile.html -%}
       <div class="unit four-fifths">
         <article>
           <div class="improve right hide-on-mobiles">
@@ -16,10 +14,7 @@ layout: default
           {{ content }}
         </article>
       </div>
-
-      {% include docs_contents.html %}
-
+      {% include docs_contents.html -%}
       <div class="clear"></div>
-
     </div>
   </section>
